# ironprose-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  add-insights.md  agent-first-cli.md  bot-token-and-readme.md  feat-compare-genre-locale.md  feat-genre-locale-flags.md  feat-insights-subcommand.md  feat-markdown-output.md  fix-compare-dedup.md  fix-compare-text-output.md  fix-list-rules-output.md  fix-locale-validation.md  fix-output-text-docs.md  fix-schema-export.md  fix-schema-ref-resolve.md  rate-subcommand.md  readme-cleanup.md  wrap-docs.md
.code-factory/: config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  code-factory-pr.yml  publish-skills.yml  release-changesets.yml  release.yml
scripts/: generate-skills.sh  sync-version.sh  tag-release.sh
skills/: SKILL.md
skills/ironprose/: SKILL.md
src/: client.rs  error.rs  input.rs  main.rs  output.rs  proxy.rs  schema.rs  types.rs
src/mcp/: audit.rs  error.rs  local_tools.rs  mod.rs  proxy.rs  sandbox.rs  server.rs
tests/: cli_integration.rs
tests/fixtures/: openapi.json  sample.txt  sherlock-holmes.txt
