[package]
name = "ironprose-cli"
version = "0.1.0"
edition = "2021"
description = "IronProse CLI — prose analysis tools for writers"
license = "MIT"
repository = "https://github.com/benchcutlogic/ironprose-cli"
readme = "README.md"

[[bin]]
name = "ironprose"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
