[package]
name = "ironprose-cli"
version = "0.5.2"
edition = "2021"
description = "IronProse CLI — prose analysis tools for writers"
license = "MIT"
repository = "https://github.com/benchcutlogic/ironprose-cli"
readme = "README.md"

[[bin]]
name = "ironprose"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex-lite = "0.1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
